frontend/tests/cases/positive/absorbLevels.gr
test : forall {a : Type} . a [0:Sec] -> a [0:Sec]
test [x] = [x]