frontend/tests/cases/negative/duplicates/forall.gr
id : forall { a a : Type } . a -> a
id x = x
